# HaPy

./: .gitignore  Calc.hs  HaPy.c  HaPy.hs  HaPy.py  HaPyModule.c  LICENSE  Makefile  Mod.hs  Newton.hs  README  README.md  changelog  example.hs  gui.py  paper.tex  test.c  test.py  uist.sty  uistSample.tex
HaPy-haskell/: HaPy.cabal  HaPy_init.c  stack.yaml
HaPy-haskell/Foreign/: HaPy.hs
HaPy-haskell/Foreign/HaPy/: Internal.hs
HaPy-python/: HaPy.py  MANIFEST  setup.py
example/: Example.py  ExampleModule.hs  Export.hs  Makefile
example/haskell/: ExampleModule.cabal  Export.hs  Makefile  stack.yaml  update_libghc_version.sh
example/python/: Example.py  Makefile
haskell/: .HaPy.cabal.swp  HaPy.cabal  LICENSE
haskell/Foreign/: HaPy.hs
python/: HaPy.py  setup.py
